syntax = "proto3";

package kratos.api;

option go_package = "github.com/yourusername/chat-app/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
  Log log = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 max_idle_conns = 3;
    int32 max_open_conns = 4;
    google.protobuf.Duration conn_max_lifetime = 5;
  }
  message Redis {
    string addr = 1;
    string password = 2;
    int32 db = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  message Minio {
    string endpoint = 1;
    string access_key = 2;
    string secret_key = 3;
    string bucket_name = 4;
    bool use_ssl = 5;
    string public_url = 6;
  }
  Database database = 1;
  Redis redis = 2;
  Minio minio = 3;
}

message Auth {
  string jwt_secret = 1;
  google.protobuf.Duration jwt_expire = 2;
}

message Log {
  string level = 1;
  string format = 2;
  string output = 3;
}